--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '12.0'
+platform :ios, '10.0'
 
 target 'v5mobile' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for v5mobile
+  #pod 'ACPTargetVEC', '~> 0.2'
     pod 'ACPCampaign', '~> 1.0'
     pod 'ACPTarget', '~> 2.0'
     pod 'ACPAnalytics', '~> 2.0'
